--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,35 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  const playAudio = (event) => {
+    const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${event.keyCode}"]`);
+    if (audio) {
+      audio.currentTime = 0; // rewind to start of audio (in case hit multiple times)
+      audio.play();
+      key.classList.add('playing');
+    }
+  }
+
+  // window.addEventListener('keyup', (e) => {
+  //   const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+  //   if (key) {
+  //     key.classList.remove('playing');
+  //   }
+  // });
+
+  // instead of removing the class on keyup, wait for the transform event to end
+  const removeTransition = (event) => {
+    if (event.propertyName==='transform') {
+      event.target.classList.remove('playing');
+    }
+  }
+
+  const keys = Array.from(document.querySelectorAll(`.key`)).forEach((key) => {
+    key.addEventListener('transitionend', removeTransition);
+  });
+
+  window.addEventListener('keydown', playAudio);
 
 </script>
 
