--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,27 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
+    
+    console.log('currentTime', currentTime);
 
+    const setDate = () => {
+      const currentTime = new Date();
+      const seconds = currentTime.getSeconds();
+      
+      const minutes = currentTime.getMinutes();
+      const hour = currentTime.getHours();
+    }
 
+    setInterval(setDate, 1000);
   </script>
 </body>
 </html>
